#3284 [Fixed] Autosuggest: Onterechte scrollbar

--- a/packages/core/src/components/scrollable/scrollable.scss
+++ b/packages/core/src/components/scrollable/scrollable.scss
@@ -73,5 +73,9 @@
         opacity: 1;
       }
     }
+
+    &.dso-scroll-noScroll {
+      overflow-y: hidden;
+    }
   }
 }
